--- a/.github/workflows/deploy_with_secrets.yml
+++ b/.github/workflows/deploy_with_secrets.yml
@@ -1,29 +1,30 @@
-name: Deploy site com segredo
+name: Build and Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout do código
-        uses: actions/checkout@v3
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
 
-      - name: Preparar arquivos com segredo
+      - name: Inject Secret 🤫
         run: |
-          mkdir dist
-          cp index.html dist/
-          cp style.css dist/
-          cat script.js | sed "s|{{process.env.KEYAPI}}|${{ secrets.KEYAPI }}|" > dist/script.js
+          sed -i "s/process.env.KEYAPI/${{ secrets.KEYAPI }}/g" script.js
 
-      - name: Deploy no GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Pages 🛠️
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          path: '.'
+
+      - name: Deploy to GitHub Pages 🚀
+        id: deployment
+        uses: actions/deploy-pages@v4
