--- a/.github/workflows/deploy_with_secrets.yml
+++ b/.github/workflows/deploy_with_secrets.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Inject Secret 🤫
         run: |
-          sed -i "s/process.env.KEYAPI/${{ secrets.KEYAPI }}/g" script.js
+          sed -i "s/API_KEY_PLACEHOLDER/${{ secrets.KEYAPI }}/g" script.js
 
       - name: Setup Pages 🛠️
         uses: actions/upload-pages-artifact@v3
